Fix ordering buttons on smaller screens

--- a/styles/base.css
+++ b/styles/base.css
@@ -128,7 +128,7 @@ a {
 }
 
 .BtnGroup {
-  @apply inline-block align-middle;
+  @apply inline-flex align-middle;
 }
 
 .BtnGroup-item {
